--- a/index.html
+++ b/index.html
@@ -125,7 +125,10 @@ a.btn-buy_token {
 			</div><!-- /wrapper -->
 
 		</div>
-		<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
+		<script
+  src="https://code.jquery.com/jquery-1.12.4.js"
+  integrity="sha256-Qw82+bXyGq6MydymqBxNPYTaUXXq7c8v3CwiYwLLNXU="
+  crossorigin="anonymous"></script>
 		<script type="text/javascript" src="js/jquery.slicebox.js"></script>
 		<script type="text/javascript">
 			$(function() {
